// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Articles All types 1`] = `
<div
  className="css-1f4j338"
>
  <div
    className="css-1xgunds"
  >
    <div>
      <div
        className="css-1jd5iyo"
      >
        <span
          className="css-6n7j50"
        >
          oainnáhus
           
          N
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"oainnáhus\\"]"
            target="_blank"
          >
            Search for oainnáhus in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1inwbm7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            syn
          </span>
           
          N
           
          nob
        </span>
      </div>
    </div>
    <div>
      <div
        className="css-1marblh"
      >
        <div>
          Iskkan sihkkut váivves oainnáhusa iežan čalmmiin, muhto dat liikká čuovvu mu.
        </div>
        <div
          className="css-1msjh1x"
        >
          Jeg prøver å vaske vekk det triste synet fra øynene mine, men det følger med likevel.
        </div>
      </div>
      <div
        className="css-1marblh"
      >
        <div>
          Lean áidna vilges olmmoš ja dieđusge oainnáhus.
        </div>
        <div
          className="css-1msjh1x"
        >
          Jeg er det eneste hvite mennesket og selvfølgelig et syn.
        </div>
      </div>
    </div>
    <div
      className="css-jxikhn"
    >
      Source: 
      smenob
    </div>
  </div>
  <div
    className="css-1xgunds"
  >
    <div>
      <div
        className="css-1jd5iyo"
      >
        <span
          className="css-6n7j50"
        >
          guolladat
           
          N
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolladat\\"]"
            target="_blank"
          >
            Search for guolladat in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1inwbm7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            kalvoin verkonkudonnassa
          </span>
           
          N
           
          fin
        </span>
      </div>
    </div>
    <div />
    <div
      className="css-jxikhn"
    >
      Source: 
      smefin
    </div>
  </div>
  <div
    className="css-1xgunds"
  >
    <div>
      <div
        className="css-1jd5iyo"
      >
        <span
          className="css-6n7j50"
        >
          androgyn
           
          N
           
          smn
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/?mode=smn#?search=cqp|[lemma%3D\\"androgyn\\"]"
            target="_blank"
          >
            Search for androgyn in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1inwbm7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgyne
          </span>
           
          N
           
          eng
        </span>
      </div>
      <div
        className="css-1idyajt"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgynlâšvuotâ
          </span>
           
          A
           
          smn
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/?mode=smn#?search=cqp|[lemma%3D\\"androgynlâšvuotâ\\"]"
            target="_blank"
          >
            Search for androgynlâšvuotâ in Korp
          </a>
        </span>
      </div>
      <div
        className="css-57uot7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgynvuotâ
          </span>
           
           
          smn
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/?mode=smn#?search=cqp|[lemma%3D\\"androgynvuotâ\\"]"
            target="_blank"
          >
            Search for androgynvuotâ in Korp
          </a>
        </span>
      </div>
      <div
        className="css-f0vlhc"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgyna
          </span>
           
          N
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"androgyna\\"]"
            target="_blank"
          >
            Search for androgyna in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1bntkfq"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgyyni
          </span>
           
          N
           
          fin
        </span>
      </div>
    </div>
    <div
      className="css-jxikhn"
    >
      <a
        href="https://satni.uit.no/termwiki/index.php?title=Servodatdieđa:androgyna"
        target="_blank"
      >
        This article on the TermWiki
      </a>
    </div>
  </div>
  <div
    className="css-1xgunds"
  >
    <div>
      <div
        className="css-1jd5iyo"
      >
        <span
          className="css-6n7j50"
        >
          gođđinmuorra
           
          S
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"gođđinmuorra\\"]"
            target="_blank"
          >
            Search for gođđinmuorra in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1inwbm7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            guolládat
          </span>
           
          S
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolládat\\"]"
            target="_blank"
          >
            Search for guolládat in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1idyajt"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            guolla
          </span>
           
          S
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolla\\"]"
            target="_blank"
          >
            Search for guolla in Korp
          </a>
        </span>
      </div>
      <div
        className="css-57uot7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            målepinne
          </span>
           
          S
           
          nob
        </span>
      </div>
    </div>
    <div
      className="css-jxikhn"
    >
      Source: 
      SD-terms
    </div>
  </div>
</div>
`;

exports[`Storyshots Articles DictArticle with examples 1`] = `
<div
  className="css-1f4j338"
>
  <div
    className="css-1xgunds"
  >
    <div>
      <div
        className="css-1jd5iyo"
      >
        <span
          className="css-6n7j50"
        >
          oainnáhus
           
          N
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"oainnáhus\\"]"
            target="_blank"
          >
            Search for oainnáhus in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1inwbm7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            syn
          </span>
           
          N
           
          nob
        </span>
      </div>
    </div>
    <div>
      <div
        className="css-1marblh"
      >
        <div>
          Iskkan sihkkut váivves oainnáhusa iežan čalmmiin, muhto dat liikká čuovvu mu.
        </div>
        <div
          className="css-1msjh1x"
        >
          Jeg prøver å vaske vekk det triste synet fra øynene mine, men det følger med likevel.
        </div>
      </div>
      <div
        className="css-1marblh"
      >
        <div>
          Lean áidna vilges olmmoš ja dieđusge oainnáhus.
        </div>
        <div
          className="css-1msjh1x"
        >
          Jeg er det eneste hvite mennesket og selvfølgelig et syn.
        </div>
      </div>
    </div>
    <div
      className="css-jxikhn"
    >
      Source: 
      smenob
    </div>
  </div>
</div>
`;

exports[`Storyshots Articles DictArticle without examples 1`] = `
<div
  className="css-1f4j338"
>
  <div
    className="css-1xgunds"
  >
    <div>
      <div
        className="css-1jd5iyo"
      >
        <span
          className="css-6n7j50"
        >
          guolladat
           
          N
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolladat\\"]"
            target="_blank"
          >
            Search for guolladat in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1inwbm7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            kalvoin verkonkudonnassa
          </span>
           
          N
           
          fin
        </span>
      </div>
    </div>
    <div />
    <div
      className="css-jxikhn"
    >
      Source: 
      smefin
    </div>
  </div>
</div>
`;

exports[`Storyshots Articles Loading 1`] = `
<div>
  Loading …
</div>
`;

exports[`Storyshots Articles Only SDTermArticle 1`] = `
<div
  className="css-1f4j338"
>
  <div
    className="css-1xgunds"
  >
    <div>
      <div
        className="css-1jd5iyo"
      >
        <span
          className="css-6n7j50"
        >
          gođđinmuorra
           
          S
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"gođđinmuorra\\"]"
            target="_blank"
          >
            Search for gođđinmuorra in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1inwbm7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            guolládat
          </span>
           
          S
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolládat\\"]"
            target="_blank"
          >
            Search for guolládat in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1idyajt"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            guolla
          </span>
           
          S
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolla\\"]"
            target="_blank"
          >
            Search for guolla in Korp
          </a>
        </span>
      </div>
      <div
        className="css-57uot7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            målepinne
          </span>
           
          S
           
          nob
        </span>
      </div>
    </div>
    <div
      className="css-jxikhn"
    >
      Source: 
      SD-terms
    </div>
  </div>
</div>
`;

exports[`Storyshots Articles Only TermWikiArticle 1`] = `
<div
  className="css-1f4j338"
>
  <div
    className="css-1xgunds"
  >
    <div>
      <div
        className="css-1jd5iyo"
      >
        <span
          className="css-6n7j50"
        >
          androgyn
           
          N
           
          smn
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/?mode=smn#?search=cqp|[lemma%3D\\"androgyn\\"]"
            target="_blank"
          >
            Search for androgyn in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1inwbm7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgyne
          </span>
           
          N
           
          eng
        </span>
      </div>
      <div
        className="css-1idyajt"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgynlâšvuotâ
          </span>
           
          A
           
          smn
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/?mode=smn#?search=cqp|[lemma%3D\\"androgynlâšvuotâ\\"]"
            target="_blank"
          >
            Search for androgynlâšvuotâ in Korp
          </a>
        </span>
      </div>
      <div
        className="css-57uot7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgynvuotâ
          </span>
           
           
          smn
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/?mode=smn#?search=cqp|[lemma%3D\\"androgynvuotâ\\"]"
            target="_blank"
          >
            Search for androgynvuotâ in Korp
          </a>
        </span>
      </div>
      <div
        className="css-f0vlhc"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgyna
          </span>
           
          N
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"androgyna\\"]"
            target="_blank"
          >
            Search for androgyna in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1bntkfq"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgyyni
          </span>
           
          N
           
          fin
        </span>
      </div>
    </div>
    <div
      className="css-jxikhn"
    >
      <a
        href="https://satni.uit.no/termwiki/index.php?title=Servodatdieđa:androgyna"
        target="_blank"
      >
        This article on the TermWiki
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots DictArticle default 1`] = `
<div
  className="css-1xgunds"
>
  <div>
    <div
      className="css-1jd5iyo"
    >
      <span
        className="css-6n7j50"
      >
        guolli
         
        N
         
        sme
      </span>
      <span
        className="css-1lyvo2c"
      >
        <a
          href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
          target="_blank"
        >
          Search for guolli in Korp
        </a>
      </span>
    </div>
    <div
      className="css-1inwbm7"
    >
      <span
        className="css-6n7j50"
      >
        <span
          className="css-1xbsv2t"
        >
          guolli
        </span>
         
        N
         
        sme
      </span>
      <span
        className="css-1lyvo2c"
      >
        <a
          href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
          target="_blank"
        >
          Search for guolli in Korp
        </a>
      </span>
    </div>
    <div
      className="css-1idyajt"
    >
      <span
        className="css-6n7j50"
      >
        <span
          className="css-1xbsv2t"
        >
          guolli
        </span>
         
        N
         
        nob
      </span>
    </div>
  </div>
  <div>
    <div
      className="css-1marblh"
    >
      <div>
        original0
      </div>
      <div
        className="css-1msjh1x"
      >
        translation0
      </div>
    </div>
    <div
      className="css-1marblh"
    >
      <div>
        original1
      </div>
      <div
        className="css-1msjh1x"
      >
        translation1
      </div>
    </div>
  </div>
  <div
    className="css-jxikhn"
  >
    Source: 
    smenob
  </div>
</div>
`;

exports[`Storyshots DictArticle without_examples 1`] = `
<div
  className="css-1xgunds"
>
  <div>
    <div
      className="css-1jd5iyo"
    >
      <span
        className="css-6n7j50"
      >
        guolli
         
        N
         
        sme
      </span>
      <span
        className="css-1lyvo2c"
      >
        <a
          href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
          target="_blank"
        >
          Search for guolli in Korp
        </a>
      </span>
    </div>
    <div
      className="css-1inwbm7"
    >
      <span
        className="css-6n7j50"
      >
        <span
          className="css-1xbsv2t"
        >
          guolli
        </span>
         
        N
         
        sme
      </span>
      <span
        className="css-1lyvo2c"
      >
        <a
          href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
          target="_blank"
        >
          Search for guolli in Korp
        </a>
      </span>
    </div>
    <div
      className="css-1idyajt"
    >
      <span
        className="css-6n7j50"
      >
        <span
          className="css-1xbsv2t"
        >
          guolli
        </span>
         
        N
         
        nob
      </span>
    </div>
  </div>
  <div />
  <div
    className="css-jxikhn"
  >
    Source: 
    smenob
  </div>
</div>
`;

exports[`Storyshots Example default 1`] = `
<div
  className="css-1marblh"
>
  <div>
    original
  </div>
  <div
    className="css-1msjh1x"
  >
    translation
  </div>
</div>
`;

exports[`Storyshots Examples default 1`] = `
<div>
  <div
    className="css-1marblh"
  >
    <div>
      original0
    </div>
    <div
      className="css-1msjh1x"
    >
      translation0
    </div>
  </div>
  <div
    className="css-1marblh"
  >
    <div>
      original1
    </div>
    <div
      className="css-1msjh1x"
    >
      translation1
    </div>
  </div>
</div>
`;

exports[`Storyshots NounParadigm Inari saami noun 1`] = `
<table>
  <thead>
    <th>
       
    </th>
    <th>
      Sg
    </th>
    <th>
      Pl
    </th>
  </thead>
  <tbody>
    <tr>
      <td>
        Nom
      </td>
      <td>
        <div>
          kyeli
        </div>
      </td>
      <td>
        <div>
          kyeleh
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Gen
      </td>
      <td>
        <div>
          kyele
        </div>
      </td>
      <td>
        <div>
          kuolij
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Acc
      </td>
      <td>
        <div>
          kyele
        </div>
      </td>
      <td>
        <div>
          kuolijd
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Ill
      </td>
      <td>
        <div>
          kuálán
        </div>
      </td>
      <td>
        <div>
          kuolijd
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Loc
      </td>
      <td>
        <div>
          kyeleest
        </div>
      </td>
      <td>
        <div>
          kuolijn
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Com
      </td>
      <td>
        <div>
          kuolijn
        </div>
      </td>
      <td>
        <div>
          kuolijguin
        </div>
        <div>
          kuolijgijn
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Abe
      </td>
      <td>
        <div>
          kyelettáá
        </div>
      </td>
      <td>
        <div>
          kuolijttáá
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Par
      </td>
      <td
        className="css-jxayus"
      >
        <div>
          kyellid
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Ess
      </td>
      <td
        className="css-jxayus"
      >
        <div>
          kyellin
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots NounParadigm Lule saami noun 1`] = `
<table>
  <thead>
    <th>
       
    </th>
    <th>
      Sg
    </th>
    <th>
      Pl
    </th>
  </thead>
  <tbody>
    <tr>
      <td>
        Nom
      </td>
      <td>
        <div>
          guolle
        </div>
      </td>
      <td>
        <div>
          guole
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Gen
      </td>
      <td>
        <div>
          guole
        </div>
      </td>
      <td>
        <div>
          guolij
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Acc
      </td>
      <td>
        <div>
          guolev
        </div>
      </td>
      <td>
        <div>
          guolijt
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Ill
      </td>
      <td>
        <div>
          guolláj
        </div>
      </td>
      <td>
        <div>
          guolijda
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Ine
      </td>
      <td>
        <div>
          guolen
        </div>
      </td>
      <td>
        <div>
          guolijn
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Ela
      </td>
      <td>
        <div>
          guoles
        </div>
      </td>
      <td>
        <div>
          guolijs
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Com
      </td>
      <td>
        <div>
          guolijn
        </div>
        <div>
          guolijn
        </div>
      </td>
      <td>
        <div>
          guolij
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Abe
      </td>
      <td>
        <div>
          guoledagá
        </div>
        <div>
          guoledagi
        </div>
      </td>
      <td>
        <div>
          guolijdagá
        </div>
        <div>
          guolijdagi
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Abe
      </td>
      <td
        className="css-jxayus"
      >
        <div>
          guoledak
        </div>
        <div>
          guoleda
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Ess
      </td>
      <td
        className="css-jxayus"
      >
        <div>
          guollen
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots NounParadigm North saami noun 1`] = `
<table>
  <thead>
    <th>
       
    </th>
    <th>
      Sg
    </th>
    <th>
      Pl
    </th>
  </thead>
  <tbody>
    <tr>
      <td>
        Nom
      </td>
      <td>
        <div>
          guolli
        </div>
      </td>
      <td>
        <div>
          guolit
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Gen
      </td>
      <td>
        <div>
          guole
        </div>
        <div>
          guoli
        </div>
      </td>
      <td>
        <div>
          guliid
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Acc
      </td>
      <td>
        <div>
          guoli
        </div>
      </td>
      <td>
        <div>
          guliid
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Ill
      </td>
      <td>
        <div>
          guollái
        </div>
      </td>
      <td>
        <div>
          guliide
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Loc
      </td>
      <td>
        <div>
          guolis
        </div>
      </td>
      <td>
        <div>
          guliin
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Com
      </td>
      <td>
        <div>
          guliin
        </div>
      </td>
      <td>
        <div>
          guliiguin
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Ess
      </td>
      <td
        className="css-jxayus"
      >
        <div>
          guollin
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots NounParadigm South saami noun 1`] = `
<table>
  <thead>
    <th>
       
    </th>
    <th>
      Sg
    </th>
    <th>
      Pl
    </th>
  </thead>
  <tbody>
    <tr>
      <td>
        Nom
      </td>
      <td>
        <div>
          guelie
        </div>
      </td>
      <td>
        <div>
          guelieh
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Gen
      </td>
      <td>
        <div>
          guelien
        </div>
      </td>
      <td>
        <div>
          gööli
        </div>
        <div>
          gueliej
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Acc
      </td>
      <td>
        <div>
          gueliem
        </div>
      </td>
      <td>
        <div>
          göölide
        </div>
        <div>
          guelide
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Ill
      </td>
      <td>
        <div>
          gualan
        </div>
      </td>
      <td>
        <div>
          göölide
        </div>
        <div>
          guelide
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Ine
      </td>
      <td>
        <div>
          guelesne
        </div>
      </td>
      <td>
        <div>
          gööline
        </div>
        <div>
          gueline
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Ela
      </td>
      <td>
        <div>
          gueleste
        </div>
      </td>
      <td>
        <div>
          göölijste
        </div>
        <div>
          guelijste
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Com
      </td>
      <td>
        <div>
          gööline
        </div>
        <div>
          gueline
        </div>
      </td>
      <td>
        <div>
          gööligujmie
        </div>
        <div>
          gueliejgujmie
        </div>
      </td>
    </tr>
    <tr>
      <td>
        Ess
      </td>
      <td
        className="css-jxayus"
      >
        <div>
          gööline
        </div>
        <div>
          gueline
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots SDTermArticle default 1`] = `
<div
  className="css-1xgunds"
>
  <div>
    <div
      className="css-1jd5iyo"
    >
      <span
        className="css-6n7j50"
      >
        guolli
         
        N
         
        sme
      </span>
      <span
        className="css-1lyvo2c"
      >
        <a
          href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
          target="_blank"
        >
          Search for guolli in Korp
        </a>
      </span>
    </div>
    <div
      className="css-1inwbm7"
    >
      <span
        className="css-6n7j50"
      >
        <span
          className="css-1xbsv2t"
        >
          guolli
        </span>
         
        N
         
        sme
      </span>
      <span
        className="css-1lyvo2c"
      >
        <a
          href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
          target="_blank"
        >
          Search for guolli in Korp
        </a>
      </span>
    </div>
    <div
      className="css-1idyajt"
    >
      <span
        className="css-6n7j50"
      >
        <span
          className="css-1xbsv2t"
        >
          guolli
        </span>
         
        N
         
        nob
      </span>
    </div>
  </div>
  <div
    className="css-jxikhn"
  >
    Source: 
    SD-terms
  </div>
</div>
`;

exports[`Storyshots Source default 1`] = `
<div
  className="css-jxikhn"
>
  Source: 
  smenob
</div>
`;

exports[`Storyshots Stem default 1`] = `
<div
  className="css-1jd5iyo"
>
  <span
    className="css-6n7j50"
  >
    guolli
     
    N
     
    sme
  </span>
  <span
    className="css-1lyvo2c"
  >
    <a
      href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
      target="_blank"
    >
      Search for guolli in Korp
    </a>
  </span>
</div>
`;

exports[`Storyshots Stem key_nonzero 1`] = `
<div
  className="css-1inwbm7"
>
  <span
    className="css-6n7j50"
  >
    <span
      className="css-1xbsv2t"
    >
      guolli
    </span>
     
    N
     
    sme
  </span>
  <span
    className="css-1lyvo2c"
  >
    <a
      href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
      target="_blank"
    >
      Search for guolli in Korp
    </a>
  </span>
</div>
`;

exports[`Storyshots Stem lang_nonsme 1`] = `
<div
  className="css-1jd5iyo"
>
  <span
    className="css-6n7j50"
  >
    guolli
     
    N
     
    smj
  </span>
  <span
    className="css-1lyvo2c"
  >
    <a
      href="http://gtweb.uit.no/korp/?mode=smj#?search=cqp|[lemma%3D\\"guolli\\"]"
      target="_blank"
    >
      Search for guolli in Korp
    </a>
  </span>
</div>
`;

exports[`Storyshots Stem non_sami 1`] = `
<div
  className="css-1jd5iyo"
>
  <span
    className="css-6n7j50"
  >
    guolli
     
    N
     
    nob
  </span>
</div>
`;

exports[`Storyshots Stems default 1`] = `
<div>
  <div
    className="css-1jd5iyo"
  >
    <span
      className="css-6n7j50"
    >
      guolli
       
      N
       
      sme
    </span>
    <span
      className="css-1lyvo2c"
    >
      <a
        href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
        target="_blank"
      >
        Search for guolli in Korp
      </a>
    </span>
  </div>
  <div
    className="css-1inwbm7"
  >
    <span
      className="css-6n7j50"
    >
      <span
        className="css-1xbsv2t"
      >
        guolli
      </span>
       
      N
       
      sme
    </span>
    <span
      className="css-1lyvo2c"
    >
      <a
        href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
        target="_blank"
      >
        Search for guolli in Korp
      </a>
    </span>
  </div>
  <div
    className="css-1idyajt"
  >
    <span
      className="css-6n7j50"
    >
      <span
        className="css-1xbsv2t"
      >
        guolli
      </span>
       
      N
       
      nob
    </span>
  </div>
</div>
`;

exports[`Storyshots TermWikiArticle default 1`] = `
<div
  className="css-1xgunds"
>
  <div>
    <div
      className="css-1jd5iyo"
    >
      <span
        className="css-6n7j50"
      >
        guolli
         
        N
         
        sme
      </span>
      <span
        className="css-1lyvo2c"
      >
        <a
          href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
          target="_blank"
        >
          Search for guolli in Korp
        </a>
      </span>
    </div>
    <div
      className="css-1inwbm7"
    >
      <span
        className="css-6n7j50"
      >
        <span
          className="css-1xbsv2t"
        >
          guolli
        </span>
         
        N
         
        sme
      </span>
      <span
        className="css-1lyvo2c"
      >
        <a
          href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
          target="_blank"
        >
          Search for guolli in Korp
        </a>
      </span>
    </div>
    <div
      className="css-1idyajt"
    >
      <span
        className="css-6n7j50"
      >
        <span
          className="css-1xbsv2t"
        >
          guolli
        </span>
         
        N
         
        nob
      </span>
    </div>
  </div>
  <div
    className="css-jxikhn"
  >
    <a
      href="https://satni.uit.no/termwiki/index.php?title=Luonddudieđa ja matematihkka:guolli"
      target="_blank"
    >
      This article on the TermWiki
    </a>
  </div>
</div>
`;
